# Oct, 27 2003
- Try to search config file in path given in ./configure
- bugfix: erasing server options after setting default values ...
- option to force shm cleanup if existing when starting
- bugfix: syslog was not used even if enabling it

#--- cvs commit TAG: rel-0-1
# Oct, 20 2003
- added periodic commit of backend
- site savecfg is now almost working
- IMPORTANT CHANGE: negation on permissions can now be written =!user
  instead of !=user
- custom messages can now be stored in files
- added optional PostgreSQL detection in configure
- cookies in vfs VIRTUAL dir: %username, %usergroup, %userhome

# Oct, 15 2003
- bugfix: waiting PASV sockets not closed when client dies
- some work on ipv6
- win32: --enable-winsock is now yes by default
- some structures are no more opaque, so we'll save the config file in a near future !
- mpatrol support to debug/find leaks/profile application
- some more facilities to debug cache/crontab/perms

# Oct, 11 2003
- bugfix: opened files/dirs not closed on sfv checker (closes: Too Many Opened Files
  after several uploads, all platforms)

# Oct, 01 2003
- bugfix: spaces at end of USER and PASS lines were removed
- ssl: use SSL_CTX_use_certificate_chain_file instead of SSL_CTX_use_certificate_file

# Sep, 22 2003
- bugfix: wrong display of ip addresses in log file
- bugfix: error `wzd_server_uid' undeclared (first use in this function) during compilation on cygwin

# Sep, 16 2003
- bugfix: group.num_logins not initialized when adding a new group
- contributions from Cyprien Laplace:
- added a "module_name" in module symbols
- added backend_get_version() and backend_get_name() in wzd_backend.c
- added new files wzd_savecfg.c wzd_savecfg.h with wzd_savecfg() function
- added a new site command 'site savecfg' to call wzd_savecfg()
- modified the default way that ip and dynamic_ip are set (was buggy if not in wzd.cfg!)

# Sep, 11 2003
- contributions from Cyprien Laplace:
- added 'vfs_remove' function, to remove a vfs entry