@@ -1,3 +1,7 @@
+# Nov, 7 2003
+- contributions from Cyprien Laplace:
+- added a "site group" command to administrate groups
+
 # Oct, 27 2003
 - Try to search config file in path given in ./configure
 - bugfix: erasing server options after setting default values ...
